--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,12 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
+pyaes==1.6.1
+pyasn1==0.6.1
 pymongo==4.10.1
+python-dotenv==1.0.1
 requests==2.32.3
+rsa==4.9
+Telethon==1.38.1
 urllib3==2.3.0
 Werkzeug==3.1.3
-python-dotenv==1.0.1
